--- a/k8s/jenkins-helm-config.yaml
+++ b/k8s/jenkins-helm-config.yaml
@@ -23,7 +23,7 @@ additionalAgents:
         cpu: "1"
         memory: "2048Mi"
 
-master:
+controller:
   JCasC:
     configScripts:
       creds: |
