--- a/k8s/values.yaml
+++ b/k8s/values.yaml
@@ -31,6 +31,7 @@ controller:
     - bitbucket-push-and-pull-request:2.7.0
     - atlassian-bitbucket-server-integration:2.1.3
     - blueocean-web:1.24.4
+    - git:4.6.0
   JCasC:
     configScripts:
       welcome-message: |
