--- a/k8s/values.yaml
+++ b/k8s/values.yaml
@@ -27,11 +27,15 @@ additionalAgents:
 controller:
   adminPassword: admin
   serviceType: NodePort
+  installPlugins:
+    - kubernetes:1.29.0
+    - workflow-aggregator:2.6
+    - git:4.6.0
+    - configuration-as-code:1.47
   additionalPlugins:
     - bitbucket-push-and-pull-request:2.7.0
     - atlassian-bitbucket-server-integration:2.1.3
     - blueocean-web:1.24.4
-    - git:4.6.0
   JCasC:
     configScripts:
       welcome-message: |
