--- a/k8s/jenkins-helm-config.yaml
+++ b/k8s/jenkins-helm-config.yaml
@@ -1,6 +1,7 @@
 agent:
   podName: default
   customJenkinsLabels: default
+  podRetention: "OnFailure"
   volumes:
     - type: PVC
       claimName: jenkins-agent
@@ -24,6 +25,17 @@ additionalAgents:
         memory: "2048Mi"
 
 controller:
+  adminPassword: admin
+  serviceType: NodePort
+  installPlugins:
+    - kubernetes:1.29.0
+    - workflow-aggregator:2.6
+    - git:4.6.0
+    - configuration-as-code:1.47
+  additionalPlugins:
+    - bitbucket-push-and-pull-request:2.7.0
+    - atlassian-bitbucket-server-integration:2.1.3
+    - blueocean-web:1.24.4
   JCasC:
     configScripts:
       creds: |
