--- a/k8s/values.yaml
+++ b/k8s/values.yaml
@@ -41,6 +41,14 @@ controller:
       welcome-message: |
         jenkins:
           systemMessage: Welcome to MY DEMO CI\CD server.
-
-
+      bitbucket: |
+        jenkins:
+          unclassified:
+            bitbucketEndpointConfiguration:
+                endpoints:
+                - bitbucketServerEndpoint:
+                    displayName: "bitbucket server"
+                    manageHooks: false
+                    serverUrl: "http://192.168.50.8:32333"
+                    serverVersion: VERSION_6
 
