--- a/k8s/values.yaml
+++ b/k8s/values.yaml
@@ -38,6 +38,19 @@ controller:
     - cloudbees-bitbucket-branch-source:2.9.7
   JCasC:
     configScripts:
+      credentials: |
+        credentials:
+          system:
+            domainCredentials:
+            - credentials:
+              - usernamePassword:
+                  id: "c4b453fe-ceff-4358-a43b-7fd40bd5a86d"
+                  password: "{AQAAABAAAAAQ7ijDUa4taK4xTScyvL10wP0fzgRl4IiWsaeHfyB+drA=}"
+                  scope: GLOBAL
+                  username: "admin"
+              - fileSystemServiceAccountCredential:
+                  id: "cc898b19-1e00-421e-9157-c83fe6504a16"
+                  scope: GLOBAL
       welcome-message: |
         jenkins:
           systemMessage: Welcome to MY DEMO CI\CD server.
